--- a/style.css
+++ b/style.css
@@ -31,14 +31,17 @@ p
 }
 a
 {
-    text-decoration: none;
-    font-size: 15px;
-    line-height: 20px;
+    color:black;
+    text-decoration: none;;
     font-weight: bold;
+    font-size: 20px;
+    background-color: lightcoral;
+    border:2px solid black;
+    border-radius: 5px;
 }
 a:hover
 {
-    color: red;
+    color: floralwhite;
 }
 input
 {
