--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ a
 {
     color:black;
     text-decoration: none;;
-    font-weight: bold;
-    font-size: 20px;
+    /* font-weight: bold; */
+    font-size: 18px;
     background-color: lightcoral;
     border:2px solid black;
     border-radius: 5px;
